src/objects/Apttus_Config2__OrderWorkflowRuleset__c.object
<CustomObject>
    <description>Represents a rule set that contains a set of rules to automate order workflow actions</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the ruleset is active</description>
        <inlineHelpText>Indicates whether the ruleset is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessContextType__c</fullName>
        <description>The business context type</description>
        <inlineHelpText>The business context type</inlineHelpText>
        <label>Business Context Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The triggering criteria</description>
        <inlineHelpText>The triggering criteria</inlineHelpText>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description of the rule set</description>
        <inlineHelpText>The description of the rule set</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule set evaluation sequence</description>
        <inlineHelpText>The rule set evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TriggerContextType__c</fullName>
        <description>The trigger context type</description>
        <inlineHelpText>The trigger context type</inlineHelpText>
        <label>Trigger Context Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Order Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The ruleset type</description>
        <inlineHelpText>The ruleset type</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API Execution</fullName>
                    <default>true</default>
                    <label>API Execution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Workflow Ruleset</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Workflow Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>